--- a/redSocial.html
+++ b/redSocial.html
@@ -12,7 +12,7 @@
 <section>
 <h2> La Raiz </h2>
 <article>
-<h3>Luis Manuel González Baizán</h3>
+<h3>Luis Manuel Gonzalez Baizan</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2000-06-18</li>
 	<li><b>lugar de nacimiento: </b>Llanos</li>
@@ -21,8 +21,8 @@
 	<li><b>coordenadas de residencia: </b>43.3521617120154,-5.873177321945873,349</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Luis-BohemianFC.jpg" alt="foto 1 de Luis Manuel González Baizán"/><br />
-<img src="multimedia/Luis-VacaEscocesa.jpg" alt="foto 2 de Luis Manuel González Baizán"/><br />
+<img src="multimedia/Luis-BohemianFC.jpg" alt="foto 1 de Luis Manuel Gonzalez Baizan"/><br />
+<img src="multimedia/Luis-VacaEscocesa.jpg" alt="foto 2 de Luis Manuel Gonzalez Baizan"/><br />
 <h4>Videos</h4>
 <video controls>
 	<source src="multimedia/Luis-BohemianGoal.mp4" type="video/mp4"/><br />
@@ -36,7 +36,7 @@ Ahorrando para realizar el viaje a Escocia e Irlanda.
 <section>
 <h2> Amigos directos </h2>
 <article>
-<h3>Mateo González Oliva</h3>
+<h3>Mateo Gonzalez Oliva</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2000-05-31</li>
 	<li><b>lugar de nacimiento: </b>Mieres</li>
@@ -45,14 +45,14 @@ Ahorrando para realizar el viaje a Escocia e Irlanda.
 	<li><b>coordenadas de residencia: </b>43.30855011899778,-5.8778295903311735,166</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Mateo-Ganado.jpg" alt="foto 1 de Mateo González Oliva"/><br />
+<img src="multimedia/Mateo-Ganado.jpg" alt="foto 1 de Mateo Gonzalez Oliva"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
 Militar y opositor para Guardia Civil.
 </p>
 </article>
 <article>
-<h3>Adrián Fernández Aladro</h3>
+<h3>Adrian Fernandez Aladro</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2001-05-15</li>
 	<li><b>lugar de nacimiento: </b>Laviana</li>
@@ -61,14 +61,14 @@ Militar y opositor para Guardia Civil.
 	<li><b>coordenadas de residencia: </b>43.15593143895082,-5.4118834308130825,735</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Adrian-Caleao.jpg" alt="foto 1 de Adrián Fernández Aladro"/><br />
+<img src="multimedia/Adrian-Caleao.jpg" alt="foto 1 de Adrian Fernandez Aladro"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
 Luchador como nadie.
 </p>
 </article>
 <article>
-<h3>Marta Fernández Morales</h3>
+<h3>Marta Fernandez Morales</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2000-04-16</li>
 	<li><b>lugar de nacimiento: </b>Leon</li>
@@ -77,7 +77,7 @@ Luchador como nadie.
 	<li><b>coordenadas de residencia: </b>40.40223849231007,-3.6977487310143657,610</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Marta-gatoMontes.jpg" alt="foto 1 de Marta Fernández Morales"/><br />
+<img src="multimedia/Marta-gatoMontes.jpg" alt="foto 1 de Marta Fernandez Morales"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
 Imparable.
@@ -99,11 +99,11 @@ Imparable.
 <img src="multimedia/David-Rap.jpg" alt="foto 1 de David Denis Fernandez"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
-Sabe 5 idiomas: Francés, Español, Inglés, Alemán y Neerlandés.
+Sabe 5 idiomas: Frances, Español, Ingles, Alemen y Neerlandes.
 </p>
 </article>
 <article>
-<h3>Marina González Rodriguez</h3>
+<h3>Marina Gonzelez Rodriguez</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2000-02-12</li>
 	<li><b>lugar de nacimiento: </b>Santander</li>
@@ -112,26 +112,26 @@ Sabe 5 idiomas: Francés, Español, Inglés, Alemán y Neerlandés.
 	<li><b>coordenadas de residencia: </b>43.422915856790105,-4.7559886012584975,8</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Marina-Llanes.jpg" alt="foto 1 de Marina González Rodriguez"/><br />
+<img src="multimedia/Marina-Llanes.jpg" alt="foto 1 de Marina Gonzelez Rodriguez"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
 Le encanta viajar.
 </p>
 </article>
 <article>
-<h3>Gonzalo Pérez Iglesias</h3>
+<h3>Gonzalo Perez Iglesias</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2000-11-19</li>
 	<li><b>lugar de nacimiento: </b>Tapia de Casariego</li>
 	<li><b>coordenadas de nacimiento: </b>43.56914086773974,-6.943048911880042,19</li>
-	<li><b>lugar de residencia: </b>Cádiz</li>
+	<li><b>lugar de residencia: </b>Cadiz</li>
 	<li><b>coordenadas de residencia: </b>36.519717776067374,-6.279534290615111,15</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Gonzalo-Guitarra.jpg" alt="foto 1 de Gonzalo Pérez Iglesias"/><br />
+<img src="multimedia/Gonzalo-Guitarra.jpg" alt="foto 1 de Gonzalo Perez Iglesias"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
-El flamenco es su pasión.
+El flamenco es su pasion.
 </p>
 </article>
 </section>
@@ -154,7 +154,7 @@ Fiestero como nadie.
 </p>
 </article>
 <article>
-<h3>Alejandro Valero González</h3>
+<h3>Alejandro Valero Gonzalez</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2001-03-20</li>
 	<li><b>lugar de nacimiento: </b>Dublin</li>
@@ -163,7 +163,7 @@ Fiestero como nadie.
 	<li><b>coordenadas de residencia: </b>64.13572020815224,-21.903255157224443,39</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Alejandro-Islandia.jpg" alt="foto 1 de Alejandro Valero González"/><br />
+<img src="multimedia/Alejandro-Islandia.jpg" alt="foto 1 de Alejandro Valero Gonzalez"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
 Es su propio jefe.
@@ -182,23 +182,23 @@ Es su propio jefe.
 <img src="multimedia/Angela-Boston.jpg" alt="foto 1 de Angela Suarez Perez"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
-Nunca se está en la misma ciudad más de 2 meses seguidos.
+Nunca se esta en la misma ciudad mas de 2 meses seguidos.
 </p>
 </article>
 </section>
 <section>
 <h2> Amigos de amigo directo 3</h2>
 <article>
-<h3>Ana García García</h3>
+<h3>Ana Garcia Garcia</h3>
 <ul>
 	<li><b>fecha de nacimiento: </b>2000-10-05</li>
-	<li><b>lugar de nacimiento: </b>Gijón</li>
+	<li><b>lugar de nacimiento: </b>Gijon</li>
 	<li><b>coordenadas de nacimiento: </b>43.53316543681475,-5.67051497632489,5</li>
 	<li><b>lugar de residencia: </b>Burgos</li>
 	<li><b>coordenadas de residencia: </b>42.34678503523332,-3.696753484499733,850</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Ana-Paisaje.jpg" alt="foto 1 de Ana García García"/><br />
+<img src="multimedia/Ana-Paisaje.jpg" alt="foto 1 de Ana Garcia Garcia"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
 Pura felicidad.
@@ -217,7 +217,7 @@ Pura felicidad.
 <img src="multimedia/Miguel-FreemanSphere.jpg" alt="foto 1 de Miguel Rodriguez Fano"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
-Físico en proceso.
+Fisico en proceso.
 </p>
 </article>
 <article>
