--- a/redSocial.html
+++ b/redSocial.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8"/>
-	<meta name="author" content="Luis Manuel González Baizán"/>
-	<meta name="description" content="Html generado a través del Xml"/>
+	<meta name="author" content="Luis Manuel Gonzalez Baizan"/>
+	<meta name="description" content="Html generado a traves del Xml"/>
 	<link rel="stylesheet" type="text/css" href="estilos.css" />
 	<title>Red Social - Inicio</title>
 </head>
@@ -99,7 +99,7 @@ Imparable.
 <img src="multimedia/David-Rap.jpg" alt="foto 1 de David Denis Fernandez"/><br />
 <h4>Comentarios de la persona</h4>
 <p>
-Sabe 5 idiomas: Frances, Español, Ingles, Alemen y Neerlandes.
+Sabe 4 idiomas: Frances, Ingles, Alemen y Neerlandes.
 </p>
 </article>
 <article>
