--- a/redSocial.html
+++ b/redSocial.html
@@ -14,18 +14,18 @@
 <article>
 <h3>Luis Manuel Gonzalez Baizan</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-06-18</li>
-	<li><b>lugar de nacimiento: </b>Llanos</li>
-	<li><b>coordenadas de nacimiento: </b>43.11972548534997,-5.543699943057527,573</li>
-	<li><b>lugar de residencia: </b>Oviedo</li>
-	<li><b>coordenadas de residencia: </b>43.3521617120154,-5.873177321945873,349</li>
+	<li>fecha de nacimiento: 2000-06-18</li>
+	<li>lugar de nacimiento: Llanos</li>
+	<li>coordenadas de nacimiento: 43.11972548534997,-5.543699943057527,573</li>
+	<li>lugar de residencia: Oviedo</li>
+	<li>coordenadas de residencia: 43.3521617120154,-5.873177321945873,349</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Luis-BohemianFC.jpg" alt="foto 1 de Luis Manuel Gonzalez Baizan"/><br />
-<img src="multimedia/Luis-VacaEscocesa.jpg" alt="foto 2 de Luis Manuel Gonzalez Baizan"/><br />
+<img src="multimedia/Luis-BohemianFC.jpg" alt="foto 1 de Luis Manuel Gonzalez Baizan"/>
+<img src="multimedia/Luis-VacaEscocesa.jpg" alt="foto 2 de Luis Manuel Gonzalez Baizan"/>
 <h4>Videos</h4>
 <video controls>
-	<source src="multimedia/Luis-BohemianGoal.mp4" type="video/mp4"/><br />
+	<source src="multimedia/Luis-BohemianGoal.mp4" type="video/mp4"/>
 </video>
 <h4>Comentarios de la persona</h4>
 <p>
@@ -38,14 +38,14 @@ Ahorrando para realizar el viaje a Escocia e Irlanda.
 <article>
 <h3>Mateo Gonzalez Oliva</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-05-31</li>
-	<li><b>lugar de nacimiento: </b>Mieres</li>
-	<li><b>coordenadas de nacimiento: </b>43.25049731953863,-5.777991945648195,207</li>
-	<li><b>lugar de residencia: </b>Soto de Ribera</li>
-	<li><b>coordenadas de residencia: </b>43.30855011899778,-5.8778295903311735,166</li>
+	<li>fecha de nacimiento: 2000-05-31</li>
+	<li>lugar de nacimiento: Mieres</li>
+	<li>coordenadas de nacimiento: 43.25049731953863,-5.777991945648195,207</li>
+	<li>lugar de residencia: Soto de Ribera</li>
+	<li>coordenadas de residencia: 43.30855011899778,-5.8778295903311735,166</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Mateo-Ganado.jpg" alt="foto 1 de Mateo Gonzalez Oliva"/><br />
+<img src="multimedia/Mateo-Ganado.jpg" alt="foto 1 de Mateo Gonzalez Oliva"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Militar y opositor para Guardia Civil.
@@ -54,14 +54,14 @@ Militar y opositor para Guardia Civil.
 <article>
 <h3>Adrian Fernandez Aladro</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2001-05-15</li>
-	<li><b>lugar de nacimiento: </b>Laviana</li>
-	<li><b>coordenadas de nacimiento: </b>43.24351110543004,-5.563859036034491,287</li>
-	<li><b>lugar de residencia: </b>Caleao</li>
-	<li><b>coordenadas de residencia: </b>43.15593143895082,-5.4118834308130825,735</li>
+	<li>fecha de nacimiento: 2001-05-15</li>
+	<li>lugar de nacimiento: Laviana</li>
+	<li>coordenadas de nacimiento: 43.24351110543004,-5.563859036034491,287</li>
+	<li>lugar de residencia: Caleao</li>
+	<li>coordenadas de residencia: 43.15593143895082,-5.4118834308130825,735</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Adrian-Caleao.jpg" alt="foto 1 de Adrian Fernandez Aladro"/><br />
+<img src="multimedia/Adrian-Caleao.jpg" alt="foto 1 de Adrian Fernandez Aladro"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Luchador como nadie.
@@ -70,14 +70,14 @@ Luchador como nadie.
 <article>
 <h3>Marta Fernandez Morales</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-04-16</li>
-	<li><b>lugar de nacimiento: </b>Leon</li>
-	<li><b>coordenadas de nacimiento: </b>42.601014044704385,-5.573271551434656,832</li>
-	<li><b>lugar de residencia: </b>Madrid</li>
-	<li><b>coordenadas de residencia: </b>40.40223849231007,-3.6977487310143657,610</li>
+	<li>fecha de nacimiento: 2000-04-16</li>
+	<li>lugar de nacimiento: Leon</li>
+	<li>coordenadas de nacimiento: 42.601014044704385,-5.573271551434656,832</li>
+	<li>lugar de residencia: Madrid</li>
+	<li>coordenadas de residencia: 40.40223849231007,-3.6977487310143657,610</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Marta-gatoMontes.jpg" alt="foto 1 de Marta Fernandez Morales"/><br />
+<img src="multimedia/Marta-gatoMontes.jpg" alt="foto 1 de Marta Fernandez Morales"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Imparable.
@@ -89,14 +89,14 @@ Imparable.
 <article>
 <h3>David Denis Fernandez</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2002-07-20</li>
-	<li><b>lugar de nacimiento: </b>Bruselas</li>
-	<li><b>coordenadas de nacimiento: </b>50.84339793569801,4.358592554502403,21</li>
-	<li><b>lugar de residencia: </b>Amsterdam</li>
-	<li><b>coordenadas de residencia: </b>52.35793779281528,4.914253420215366,1</li>
+	<li>fecha de nacimiento: 2002-07-20</li>
+	<li>lugar de nacimiento: Bruselas</li>
+	<li>coordenadas de nacimiento: 50.84339793569801,4.358592554502403,21</li>
+	<li>lugar de residencia: Amsterdam</li>
+	<li>coordenadas de residencia: 52.35793779281528,4.914253420215366,1</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/David-Rap.jpg" alt="foto 1 de David Denis Fernandez"/><br />
+<img src="multimedia/David-Rap.jpg" alt="foto 1 de David Denis Fernandez"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Sabe 4 idiomas: Frances, Ingles, Alemen y Neerlandes.
@@ -105,14 +105,14 @@ Sabe 4 idiomas: Frances, Ingles, Alemen y Neerlandes.
 <article>
 <h3>Marina Gonzelez Rodriguez</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-02-12</li>
-	<li><b>lugar de nacimiento: </b>Santander</li>
-	<li><b>coordenadas de nacimiento: </b>43.4647031225115,-3.813369138186053,11</li>
-	<li><b>lugar de residencia: </b>Llanes</li>
-	<li><b>coordenadas de residencia: </b>43.422915856790105,-4.7559886012584975,8</li>
+	<li>fecha de nacimiento: 2000-02-12</li>
+	<li>lugar de nacimiento: Santander</li>
+	<li>coordenadas de nacimiento: 43.4647031225115,-3.813369138186053,11</li>
+	<li>lugar de residencia: Llanes</li>
+	<li>coordenadas de residencia: 43.422915856790105,-4.7559886012584975,8</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Marina-Llanes.jpg" alt="foto 1 de Marina Gonzelez Rodriguez"/><br />
+<img src="multimedia/Marina-Llanes.jpg" alt="foto 1 de Marina Gonzelez Rodriguez"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Le encanta viajar.
@@ -121,14 +121,14 @@ Le encanta viajar.
 <article>
 <h3>Gonzalo Perez Iglesias</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-11-19</li>
-	<li><b>lugar de nacimiento: </b>Tapia de Casariego</li>
-	<li><b>coordenadas de nacimiento: </b>43.56914086773974,-6.943048911880042,19</li>
-	<li><b>lugar de residencia: </b>Cadiz</li>
-	<li><b>coordenadas de residencia: </b>36.519717776067374,-6.279534290615111,15</li>
+	<li>fecha de nacimiento: 2000-11-19</li>
+	<li>lugar de nacimiento: Tapia de Casariego</li>
+	<li>coordenadas de nacimiento: 43.56914086773974,-6.943048911880042,19</li>
+	<li>lugar de residencia: Cadiz</li>
+	<li>coordenadas de residencia: 36.519717776067374,-6.279534290615111,15</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Gonzalo-Guitarra.jpg" alt="foto 1 de Gonzalo Perez Iglesias"/><br />
+<img src="multimedia/Gonzalo-Guitarra.jpg" alt="foto 1 de Gonzalo Perez Iglesias"/>
 <h4>Comentarios de la persona</h4>
 <p>
 El flamenco es su pasion.
@@ -140,14 +140,14 @@ El flamenco es su pasion.
 <article>
 <h3>Hugo Martinez Martinez</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2001-06-29</li>
-	<li><b>lugar de nacimiento: </b>Benidorm</li>
-	<li><b>coordenadas de nacimiento: </b>38.53398213305735,-0.13111140647912203,19</li>
-	<li><b>lugar de residencia: </b>Zaragoza</li>
-	<li><b>coordenadas de residencia: </b>41.646811674875984,-0.8906897774736898,221</li>
+	<li>fecha de nacimiento: 2001-06-29</li>
+	<li>lugar de nacimiento: Benidorm</li>
+	<li>coordenadas de nacimiento: 38.53398213305735,-0.13111140647912203,19</li>
+	<li>lugar de residencia: Zaragoza</li>
+	<li>coordenadas de residencia: 41.646811674875984,-0.8906897774736898,221</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Hugo-Zaragoza.jpg" alt="foto 1 de Hugo Martinez Martinez"/><br />
+<img src="multimedia/Hugo-Zaragoza.jpg" alt="foto 1 de Hugo Martinez Martinez"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Fiestero como nadie.
@@ -156,14 +156,14 @@ Fiestero como nadie.
 <article>
 <h3>Alejandro Valero Gonzalez</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2001-03-20</li>
-	<li><b>lugar de nacimiento: </b>Dublin</li>
-	<li><b>coordenadas de nacimiento: </b>53.35873602893346,-6.330162844873174,38</li>
-	<li><b>lugar de residencia: </b>Reikiavik</li>
-	<li><b>coordenadas de residencia: </b>64.13572020815224,-21.903255157224443,39</li>
+	<li>fecha de nacimiento: 2001-03-20</li>
+	<li>lugar de nacimiento: Dublin</li>
+	<li>coordenadas de nacimiento: 53.35873602893346,-6.330162844873174,38</li>
+	<li>lugar de residencia: Reikiavik</li>
+	<li>coordenadas de residencia: 64.13572020815224,-21.903255157224443,39</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Alejandro-Islandia.jpg" alt="foto 1 de Alejandro Valero Gonzalez"/><br />
+<img src="multimedia/Alejandro-Islandia.jpg" alt="foto 1 de Alejandro Valero Gonzalez"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Es su propio jefe.
@@ -172,14 +172,14 @@ Es su propio jefe.
 <article>
 <h3>Angela Suarez Perez</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-09-27</li>
-	<li><b>lugar de nacimiento: </b>Lisboa</li>
-	<li><b>coordenadas de nacimiento: </b>38.719785335606,-9.136514408307939,15</li>
-	<li><b>lugar de residencia: </b>Boston</li>
-	<li><b>coordenadas de residencia: </b>42.35138338770072,-71.06641598523109,44</li>
+	<li>fecha de nacimiento: 2000-09-27</li>
+	<li>lugar de nacimiento: Lisboa</li>
+	<li>coordenadas de nacimiento: 38.719785335606,-9.136514408307939,15</li>
+	<li>lugar de residencia: Boston</li>
+	<li>coordenadas de residencia: 42.35138338770072,-71.06641598523109,44</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Angela-Boston.jpg" alt="foto 1 de Angela Suarez Perez"/><br />
+<img src="multimedia/Angela-Boston.jpg" alt="foto 1 de Angela Suarez Perez"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Nunca se esta en la misma ciudad mas de 2 meses seguidos.
@@ -191,14 +191,14 @@ Nunca se esta en la misma ciudad mas de 2 meses seguidos.
 <article>
 <h3>Ana Garcia Garcia</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-10-05</li>
-	<li><b>lugar de nacimiento: </b>Gijon</li>
-	<li><b>coordenadas de nacimiento: </b>43.53316543681475,-5.67051497632489,5</li>
-	<li><b>lugar de residencia: </b>Burgos</li>
-	<li><b>coordenadas de residencia: </b>42.34678503523332,-3.696753484499733,850</li>
+	<li>fecha de nacimiento: 2000-10-05</li>
+	<li>lugar de nacimiento: Gijon</li>
+	<li>coordenadas de nacimiento: 43.53316543681475,-5.67051497632489,5</li>
+	<li>lugar de residencia: Burgos</li>
+	<li>coordenadas de residencia: 42.34678503523332,-3.696753484499733,850</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Ana-Paisaje.jpg" alt="foto 1 de Ana Garcia Garcia"/><br />
+<img src="multimedia/Ana-Paisaje.jpg" alt="foto 1 de Ana Garcia Garcia"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Pura felicidad.
@@ -207,14 +207,14 @@ Pura felicidad.
 <article>
 <h3>Miguel Rodriguez Fano</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2000-04-01</li>
-	<li><b>lugar de nacimiento: </b>Meres</li>
-	<li><b>coordenadas de nacimiento: </b>43.37568888491117,-5.748992952555026,185</li>
-	<li><b>lugar de residencia: </b>Roma</li>
-	<li><b>coordenadas de residencia: </b>41.8905651018429,12.494791200265107,58</li>
+	<li>fecha de nacimiento: 2000-04-01</li>
+	<li>lugar de nacimiento: Meres</li>
+	<li>coordenadas de nacimiento: 43.37568888491117,-5.748992952555026,185</li>
+	<li>lugar de residencia: Roma</li>
+	<li>coordenadas de residencia: 41.8905651018429,12.494791200265107,58</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Miguel-FreemanSphere.jpg" alt="foto 1 de Miguel Rodriguez Fano"/><br />
+<img src="multimedia/Miguel-FreemanSphere.jpg" alt="foto 1 de Miguel Rodriguez Fano"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Fisico en proceso.
@@ -223,14 +223,14 @@ Fisico en proceso.
 <article>
 <h3>Felipe Martinez Rodriguez</h3>
 <ul>
-	<li><b>fecha de nacimiento: </b>2001-12-02</li>
-	<li><b>lugar de nacimiento: </b>Sevilla</li>
-	<li><b>coordenadas de nacimiento: </b>37.37862399505642,-5.977033022616114,6</li>
-	<li><b>lugar de residencia: </b>Barcelona</li>
-	<li><b>coordenadas de residencia: </b>41.39367694756774,2.1724594247652895,7</li>
+	<li>fecha de nacimiento: 2001-12-02</li>
+	<li>lugar de nacimiento: Sevilla</li>
+	<li>coordenadas de nacimiento: 37.37862399505642,-5.977033022616114,6</li>
+	<li>lugar de residencia: Barcelona</li>
+	<li>coordenadas de residencia: 41.39367694756774,2.1724594247652895,7</li>
 </ul>
 <h4>Fotos</h4>
-<img src="multimedia/Felipe.jpg" alt="foto 1 de Felipe Martinez Rodriguez"/><br />
+<img src="multimedia/Felipe.jpg" alt="foto 1 de Felipe Martinez Rodriguez"/>
 <h4>Comentarios de la persona</h4>
 <p>
 Actor preferido Denzel Washington.
