--- a/redSocial.html
+++ b/redSocial.html
@@ -4,204 +4,196 @@
 	<meta charset="UTF-8"/>
 	<meta name="author" content="Luis Manuel Gonzalez Baizan"/>
 	<meta name="description" content="Html generado a traves del Xml"/>
-	<link rel="stylesheet" type="text/css" href="estilos.css" />
+	<meta name="keywords" content="red,social,nacimiento,coordenadas,residencia,fotos,videos,comentarios" />
+	<meta name ="viewport" content ="width=device-width, initial-scale=1.0" />
 	<title>Red Social - Inicio</title>
+	<link rel="stylesheet" type="text/css" href="estilos.css" />
 </head>
 <body>
 <h1>Red Social</h1>
 <section>
 <h2>Luis Manuel Gonzalez Baizan</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-06-18</li>
-	<li>lugar de nacimiento: Llanos</li>
-	<li>coordenadas de nacimiento: 43.11972548534997,-5.543699943057527,573</li>
-	<li>lugar de residencia: Oviedo</li>
-	<li>coordenadas de residencia: 43.3521617120154,-5.873177321945873,349</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-06-18</p>
+<p>Lugar de nacimiento: Llanos</p>
+<p>Coordenadas de nacimiento: 43.11972548534997,-5.543699943057527,573</p>
+<p>Lugar de residencia: Oviedo</p>
+<p>Coordenadas de residencia: 43.3521617120154,-5.873177321945873,349</p>
+<h3>Fotos</h3>
 <img src="multimedia/Luis-BohemianFC.jpg" alt="foto 1 de Luis Manuel Gonzalez Baizan"/>
 <img src="multimedia/Luis-VacaEscocesa.jpg" alt="foto 2 de Luis Manuel Gonzalez Baizan"/>
-<h4>Videos</h4>
+<h3>Videos</h3>
 <video controls>
 	<source src="multimedia/Luis-BohemianGoal.mp4" type="video/mp4"/>
 </video>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Ahorrando para realizar el viaje a Escocia e Irlanda.
 </p>
 </section>
 <section>
 <h2>Mateo Gonzalez Oliva</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-05-31</li>
-	<li>lugar de nacimiento: Mieres</li>
-	<li>coordenadas de nacimiento: 43.25049731953863,-5.777991945648195,207</li>
-	<li>lugar de residencia: Soto de Ribera</li>
-	<li>coordenadas de residencia: 43.30855011899778,-5.8778295903311735,166</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-05-31</p>
+<p>Lugar de nacimiento: Mieres</p>
+<p>Coordenadas de nacimiento: 43.25049731953863,-5.777991945648195,207</p>
+<p>Lugar de residencia: Soto de Ribera</p>
+<p>Coordenadas de residencia: 43.30855011899778,-5.8778295903311735,166</p>
+<h3>Fotos</h3>
 <img src="multimedia/Mateo-Ganado.jpg" alt="foto 1 de Mateo Gonzalez Oliva"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Militar y opositor para Guardia Civil.
 </p>
+</section>
+<section>
 <h2>Adrian Fernandez Aladro</h2>
-<ul>
-	<li>fecha de nacimiento: 2001-05-15</li>
-	<li>lugar de nacimiento: Laviana</li>
-	<li>coordenadas de nacimiento: 43.24351110543004,-5.563859036034491,287</li>
-	<li>lugar de residencia: Caleao</li>
-	<li>coordenadas de residencia: 43.15593143895082,-5.4118834308130825,735</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2001-05-15</p>
+<p>Lugar de nacimiento: Laviana</p>
+<p>Coordenadas de nacimiento: 43.24351110543004,-5.563859036034491,287</p>
+<p>Lugar de residencia: Caleao</p>
+<p>Coordenadas de residencia: 43.15593143895082,-5.4118834308130825,735</p>
+<h3>Fotos</h3>
 <img src="multimedia/Adrian-Caleao.jpg" alt="foto 1 de Adrian Fernandez Aladro"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Luchador como nadie.
 </p>
+</section>
+<section>
 <h2>Marta Fernandez Morales</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-04-16</li>
-	<li>lugar de nacimiento: Leon</li>
-	<li>coordenadas de nacimiento: 42.601014044704385,-5.573271551434656,832</li>
-	<li>lugar de residencia: Madrid</li>
-	<li>coordenadas de residencia: 40.40223849231007,-3.6977487310143657,610</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-04-16</p>
+<p>Lugar de nacimiento: Leon</p>
+<p>Coordenadas de nacimiento: 42.601014044704385,-5.573271551434656,832</p>
+<p>Lugar de residencia: Madrid</p>
+<p>Coordenadas de residencia: 40.40223849231007,-3.6977487310143657,610</p>
+<h3>Fotos</h3>
 <img src="multimedia/Marta-gatoMontes.jpg" alt="foto 1 de Marta Fernandez Morales"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Imparable.
 </p>
 </section>
 <section>
 <h2>David Denis Fernandez</h2>
-<ul>
-	<li>fecha de nacimiento: 2002-07-20</li>
-	<li>lugar de nacimiento: Bruselas</li>
-	<li>coordenadas de nacimiento: 50.84339793569801,4.358592554502403,21</li>
-	<li>lugar de residencia: Amsterdam</li>
-	<li>coordenadas de residencia: 52.35793779281528,4.914253420215366,1</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2002-07-20</p>
+<p>Lugar de nacimiento: Bruselas</p>
+<p>Coordenadas de nacimiento: 50.84339793569801,4.358592554502403,21</p>
+<p>Lugar de residencia: Amsterdam</p>
+<p>Coordenadas de residencia: 52.35793779281528,4.914253420215366,1</p>
+<h3>Fotos</h3>
 <img src="multimedia/David-Rap.jpg" alt="foto 1 de David Denis Fernandez"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Sabe 4 idiomas: Frances, Ingles, Alemen y Neerlandes.
 </p>
+</section>
+<section>
 <h2>Marina Gonzelez Rodriguez</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-02-12</li>
-	<li>lugar de nacimiento: Santander</li>
-	<li>coordenadas de nacimiento: 43.4647031225115,-3.813369138186053,11</li>
-	<li>lugar de residencia: Llanes</li>
-	<li>coordenadas de residencia: 43.422915856790105,-4.7559886012584975,8</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-02-12</p>
+<p>Lugar de nacimiento: Santander</p>
+<p>Coordenadas de nacimiento: 43.4647031225115,-3.813369138186053,11</p>
+<p>Lugar de residencia: Llanes</p>
+<p>Coordenadas de residencia: 43.422915856790105,-4.7559886012584975,8</p>
+<h3>Fotos</h3>
 <img src="multimedia/Marina-Llanes.jpg" alt="foto 1 de Marina Gonzelez Rodriguez"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Le encanta viajar.
 </p>
+</section>
+<section>
 <h2>Gonzalo Perez Iglesias</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-11-19</li>
-	<li>lugar de nacimiento: Tapia de Casariego</li>
-	<li>coordenadas de nacimiento: 43.56914086773974,-6.943048911880042,19</li>
-	<li>lugar de residencia: Cadiz</li>
-	<li>coordenadas de residencia: 36.519717776067374,-6.279534290615111,15</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-11-19</p>
+<p>Lugar de nacimiento: Tapia de Casariego</p>
+<p>Coordenadas de nacimiento: 43.56914086773974,-6.943048911880042,19</p>
+<p>Lugar de residencia: Cadiz</p>
+<p>Coordenadas de residencia: 36.519717776067374,-6.279534290615111,15</p>
+<h3>Fotos</h3>
 <img src="multimedia/Gonzalo-Guitarra.jpg" alt="foto 1 de Gonzalo Perez Iglesias"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 El flamenco es su pasion.
 </p>
 </section>
 <section>
 <h2>Hugo Martinez Martinez</h2>
-<ul>
-	<li>fecha de nacimiento: 2001-06-29</li>
-	<li>lugar de nacimiento: Benidorm</li>
-	<li>coordenadas de nacimiento: 38.53398213305735,-0.13111140647912203,19</li>
-	<li>lugar de residencia: Zaragoza</li>
-	<li>coordenadas de residencia: 41.646811674875984,-0.8906897774736898,221</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2001-06-29</p>
+<p>Lugar de nacimiento: Benidorm</p>
+<p>Coordenadas de nacimiento: 38.53398213305735,-0.13111140647912203,19</p>
+<p>Lugar de residencia: Zaragoza</p>
+<p>Coordenadas de residencia: 41.646811674875984,-0.8906897774736898,221</p>
+<h3>Fotos</h3>
 <img src="multimedia/Hugo-Zaragoza.jpg" alt="foto 1 de Hugo Martinez Martinez"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Fiestero como nadie.
 </p>
+</section>
+<section>
 <h2>Alejandro Valero Gonzalez</h2>
-<ul>
-	<li>fecha de nacimiento: 2001-03-20</li>
-	<li>lugar de nacimiento: Dublin</li>
-	<li>coordenadas de nacimiento: 53.35873602893346,-6.330162844873174,38</li>
-	<li>lugar de residencia: Reikiavik</li>
-	<li>coordenadas de residencia: 64.13572020815224,-21.903255157224443,39</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2001-03-20</p>
+<p>Lugar de nacimiento: Dublin</p>
+<p>Coordenadas de nacimiento: 53.35873602893346,-6.330162844873174,38</p>
+<p>Lugar de residencia: Reikiavik</p>
+<p>Coordenadas de residencia: 64.13572020815224,-21.903255157224443,39</p>
+<h3>Fotos</h3>
 <img src="multimedia/Alejandro-Islandia.jpg" alt="foto 1 de Alejandro Valero Gonzalez"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Es su propio jefe.
 </p>
+</section>
+<section>
 <h2>Angela Suarez Perez</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-09-27</li>
-	<li>lugar de nacimiento: Lisboa</li>
-	<li>coordenadas de nacimiento: 38.719785335606,-9.136514408307939,15</li>
-	<li>lugar de residencia: Boston</li>
-	<li>coordenadas de residencia: 42.35138338770072,-71.06641598523109,44</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-09-27</p>
+<p>Lugar de nacimiento: Lisboa</p>
+<p>Coordenadas de nacimiento: 38.719785335606,-9.136514408307939,15</p>
+<p>Lugar de residencia: Boston</p>
+<p>Coordenadas de residencia: 42.35138338770072,-71.06641598523109,44</p>
+<h3>Fotos</h3>
 <img src="multimedia/Angela-Boston.jpg" alt="foto 1 de Angela Suarez Perez"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Nunca se esta en la misma ciudad mas de 2 meses seguidos.
 </p>
 </section>
 <section>
 <h2>Ana Garcia Garcia</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-10-05</li>
-	<li>lugar de nacimiento: Gijon</li>
-	<li>coordenadas de nacimiento: 43.53316543681475,-5.67051497632489,5</li>
-	<li>lugar de residencia: Burgos</li>
-	<li>coordenadas de residencia: 42.34678503523332,-3.696753484499733,850</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-10-05</p>
+<p>Lugar de nacimiento: Gijon</p>
+<p>Coordenadas de nacimiento: 43.53316543681475,-5.67051497632489,5</p>
+<p>Lugar de residencia: Burgos</p>
+<p>Coordenadas de residencia: 42.34678503523332,-3.696753484499733,850</p>
+<h3>Fotos</h3>
 <img src="multimedia/Ana-Paisaje.jpg" alt="foto 1 de Ana Garcia Garcia"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Pura felicidad.
 </p>
+</section>
+<section>
 <h2>Miguel Rodriguez Fano</h2>
-<ul>
-	<li>fecha de nacimiento: 2000-04-01</li>
-	<li>lugar de nacimiento: Meres</li>
-	<li>coordenadas de nacimiento: 43.37568888491117,-5.748992952555026,185</li>
-	<li>lugar de residencia: Roma</li>
-	<li>coordenadas de residencia: 41.8905651018429,12.494791200265107,58</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2000-04-01</p>
+<p>Lugar de nacimiento: Meres</p>
+<p>Coordenadas de nacimiento: 43.37568888491117,-5.748992952555026,185</p>
+<p>Lugar de residencia: Roma</p>
+<p>Coordenadas de residencia: 41.8905651018429,12.494791200265107,58</p>
+<h3>Fotos</h3>
 <img src="multimedia/Miguel-FreemanSphere.jpg" alt="foto 1 de Miguel Rodriguez Fano"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Fisico en proceso.
 </p>
+</section>
+<section>
 <h2>Felipe Martinez Rodriguez</h2>
-<ul>
-	<li>fecha de nacimiento: 2001-12-02</li>
-	<li>lugar de nacimiento: Sevilla</li>
-	<li>coordenadas de nacimiento: 37.37862399505642,-5.977033022616114,6</li>
-	<li>lugar de residencia: Barcelona</li>
-	<li>coordenadas de residencia: 41.39367694756774,2.1724594247652895,7</li>
-</ul>
-<h4>Fotos</h4>
+<p>Fecha de nacimiento: 2001-12-02</p>
+<p>Lugar de nacimiento: Sevilla</p>
+<p>Coordenadas de nacimiento: 37.37862399505642,-5.977033022616114,6</p>
+<p>Lugar de residencia: Barcelona</p>
+<p>Coordenadas de residencia: 41.39367694756774,2.1724594247652895,7</p>
+<h3>Fotos</h3>
 <img src="multimedia/Felipe.jpg" alt="foto 1 de Felipe Martinez Rodriguez"/>
-<h4>Comentarios de la persona</h4>
+<h3>Comentarios de la persona</h3>
 <p>
 Actor preferido Denzel Washington.
 </p>
